# rkiauh

./: .gitignore  Cargo.toml  README.md  README_zh.md
.github/workflows/: ci.yml
src/: main.rs
src/installer/: commands.rs  mod.rs  systemd.rs
src/tui/: dashboard.rs  mod.rs
src/utils/: config.rs  mod.rs  sys.rs
