[package]
name = "rkiauh"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
zbus = { version = "5.16.0", features = ["tokio"] }
git2 = { version = "0.21.0", default-features = false }
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror= "2"
tokio-stream = "0.1"
