[package]
name = "rkiauh"
version = "0.1.0"
edition = "2021"
description = "Native console utility to install, configure, and monitor systems offline"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
zbus = "4.1"
tokio = { version = "1.37", features = ["full", "rt-multi-thread"] }
sysinfo = "0.30"

[profile.release]
opt-level = 3